Changing Constructor usage to Static Method Factory, to save Memory